# ai-implementation

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: gitleaks-schedule-scan.yml
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: healthz.py
app/api/v1/endpoints/: test.py
app/core/: config.py  sentry.py  translator.py
app/crud/: base.py
app/db/: session.py
app/middlewares/: i18n_middleware.py
lib/: download_nltk_packages.py
migrations/: env.py
migrations/versions/: 2023_11_09_1157-ae03b25bf253_enable_pg_vector_extension.py
