[tool.poetry]
name = "ai-implementation"
version = "0.1.0"
description = ""
authors = ["Pham Anh Quoc Phien <phien.pham@employmenthero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic-settings = "^2.0.3"
sentry-sdk = "^1.34.0"
asyncpg = "^0.29.0"
langchain = "^0.0.332"
pgvector = "^0.2.3"
psycopg2-binary = "^2.9.9"
nltk = "^3.8.1"
celery = {extras = ["sqlalchemy"], version = "^5.3.4"}

[tool.poetry.dev-dependencies]
ruff = "^0.1.5"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
nbqa = "^1.7.0"
pydocstyle = "^6.3.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
